# soci_integration_test01

./: .gitmodules  README.md  run_build_debug.sh  run_build_valgrind_debug.sh
application/: CMakeLists.txt
application/config/: main.json
application/src/: main_01.cpp  main_02.cpp  main_03.cpp
application/src/modules/common/: common.cpp  common.hpp
